Introducing padding-left to fix alignment to floating label

--- a/src/components/prompt-template/index.module.scss
+++ b/src/components/prompt-template/index.module.scss
@@ -53,6 +53,7 @@ label {
   border: 0.15rem solid white;
   transition: border-color 0.2s ease;
   width: auto;
+  padding-left: 1rem;
   margin-bottom: 2rem;
 
   @media (min-width: 800px) {
